--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "@angular/platform-browser": "~8.2.0",
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
+    "ag-grid-angular": "^22.1.1",
+    "ag-grid-community": "^22.1.1",
     "firebase": "^7.10.0",
     "hammerjs": "^2.0.8",
-    "rxjs": "~6.4.0",
+    "ngx-webcam": "^0.2.6",
+    "rxjs": "^6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
