--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ag-grid-community": "^22.1.1",
     "firebase": "^7.10.0",
     "hammerjs": "^2.0.8",
+    "jspdf": "^1.5.3",
     "ngx-webcam": "^0.2.6",
     "rxjs": "^6.4.0",
     "tslib": "^1.10.0",
